[package]
name = "stand_up"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# chrono = "0.4.24"
# ical = {version = "0.8.0", default-features = false, features = ["ical"]}
notify-rust = "4.8.0"
rand = "0.8.5"
# reqwest = "0.11.16"
